[gd_scene load_steps=5 format=3 uid="uid://1qihokbfx0tl"]

[ext_resource type="Script" uid="uid://ch5ebqtltegdh" path="res://scenes and scripts/mushroom.gd" id="1_esscd"]
[ext_resource type="Texture2D" uid="uid://b51ln5eybjn64" path="res://textures/mushroom.png" id="2_eoesm"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hyhml"]
size = Vector2(16, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_eoesm"]
size = Vector2(16, 16)

[node name="Mushroom" type="CharacterBody2D"]
collision_layer = 0
script = ExtResource("1_esscd")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_hyhml")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_eoesm")

[node name="WallChecker" type="RayCast2D" parent="."]
position = Vector2(8, 2)
target_position = Vector2(4, 0)

[node name="Timer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="HitDetector" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitDetector"]
shape = SubResource("RectangleShape2D_eoesm")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="body_entered" from="HitDetector" to="." method="_on_hit_detector_body_entered"]
